force-app/main/default/objects/CoverageBenefitItem__c/CoverageBenefitItem__c.object-meta.xml
<CustomObject>
    <description>Represents the benefits items provided to a covered member by a purchaser’s plan.</description>
    <label>Coverage Benefit Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoverageBenefitItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>