force-app/main/default/objects/CoverageBenefitItem__c/fields/BenefitCategory__c.field-meta.xml
<CustomField>
    <fullName>BenefitCategory__c</fullName>
    <inlineHelpText>Name of the benefit category this item belongs to.</inlineHelpText>
    <label>Benefit Category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>