force-app/main/default/objects/CoverageBenefitItem__c/fields/CoverageBenefitId__c.field-meta.xml
<CustomField>
    <fullName>CoverageBenefitId__c</fullName>
    <inlineHelpText>The ID of the benefit this item belongs to.</inlineHelpText>
    <label>Coverage Benefit Id</label>
    <referenceTo>CoverageBenefit__c</referenceTo>
    <relationshipLabel>CoverageBenefitItem</relationshipLabel>
    <relationshipName>CoverageBenefitItemPlanId</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>