force-app/main/default/objects/CoverageBenefitItem__c/fields/CPTHCPCSLastId__c.field-meta.xml
<CustomField>
    <fullName>CPTHCPCSLastId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Last CPT or HCPCS code for this Service procedure code</inlineHelpText>
    <label>CPT Last Code</label>
    <referenceTo>HealthCare_Procedure__c</referenceTo>
    <relationshipLabel>CPT Last Code</relationshipLabel>
    <relationshipName>CoverageCPTLastId</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>