force-app/main/default/objects/CoverageBenefitItem__c/fields/IsInPlanNetwork__c.field-meta.xml
<CustomField>
    <fullName>IsInPlanNetwork__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the benefit is only available in the plan network.</inlineHelpText>
    <label>IsInPlanNetwork</label>
    <type>Checkbox</type>
</CustomField>