force-app/main/default/objects/CoverageBenefitItem__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The ID of the member receiving this benefit item.</inlineHelpText>
    <label>MemberId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CoverageMemberIdAccount</relationshipLabel>
    <relationshipName>CoverageMemberIdAccount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>