force-app/main/default/objects/CoverageBenefitItem__c/fields/ServiceTier__c.field-meta.xml
<CustomField>
    <fullName>ServiceTier__c</fullName>
    <inlineHelpText>Typically applied to Prescription drugs</inlineHelpText>
    <label>ServiceTier</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>