force-app/main/default/objects/CoverageBenefitItem__c/fields/ServiceTypeCopay__c.field-meta.xml
<CustomField>
    <fullName>ServiceTypeCopay__c</fullName>
    <inlineHelpText>The amount a member contributes towards treatment.</inlineHelpText>
    <label>ServiceTypeCopay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>